python server, homepage

--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,76 @@
-Home page
+<!DOCTYPE html>
+<html lang="en-US">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>md2mobi</title>
+		<link rel="icon" type="image/png" href="images/favicon.png" sizes="32x32">
+		<link rel='stylesheet' href='style.css' type='text/css' media='screen' />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+	</head>
+	<body id="fullsingle" class="page-template-page-fullsingle-split">
+		<div class="fs-split">
+			<div class="split-image"></div>
+			<div class="split-content">
+				<div class="split-content-vertically-center">
+					<div class="split-intro">
+						<h1>MD2MOBI</h1>
+						<span class="tagline">Convert Markdown to MOBI</span>
+					</div>
+					<div class="split-bio">
+						<p>This tool lets you convert Mardown files to Amazon Kindle compatible files.</p>
+						<br/>
+						<p>
+							<form enctype="multipart/form-data" action="/" method="post">
+									<input type="text" name="title" placeholder="Title" />
+									<input type="text" name="author" placeholder="Author" />
+							    <input type="file" name="file" />
+							    <button type="submit">Convert</button>
+							</form>
+						</p>
+					</div>
+					<div class="split-lists">
+						<!-- <div class="split-list">
+
+							<h3>Connect</h3>
+
+							<ul>
+								<li><a href="#">Blog</a></li>
+								<li><a href="#">Email</a></li>
+								<li><a href="#">Newsletter</a></li>
+							</ul>
+
+						</div>
+
+						<div class="split-list">
+
+							<h3>Social</h3>
+
+							<ul>
+								<li><a href="#">Twitter</a></li>
+								<li><a href="#">Instagram</a></li>
+								<li><a href="#">Dribbble</a></li>
+							</ul>
+
+						</div>
+
+						<div class="split-list">
+
+							<h3>Network</h3>
+
+							<ul>
+								<li><a href="#">Link One</a></li>
+								<li><a href="#">Link Two</a></li>
+								<li><a href="#">Link Three</a></li>
+							</ul>
+
+						</div> -->
+					</div>
+					<div class="split-credit">
+						<p>&copy;2019 Made with <span style="color: red">❤️</span> by lapwat</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
