--- a/html/index.html
+++ b/html/index.html
@@ -22,9 +22,9 @@
 						<br/>
 						<p>
 							<form enctype="multipart/form-data" action="/" method="post">
-									<input type="text" name="title" placeholder="Title" />
-									<input type="text" name="author" placeholder="Author" />
-							    <input type="file" name="file" />
+									<input required type="text" name="title" placeholder="Title" />
+									<input required type="text" name="author" placeholder="Author" />
+							    <input required type="file" name="file" />
 							    <button type="submit">Convert</button>
 							</form>
 						</p>
