--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 				<div class="split-content-vertically-center">
 					<div class="split-intro">
 						<h1>MD2MOBI</h1>
-						<span class="tagline">Convert Markdown to MOBI</span>
+						<span class="tagline">Unleash. The. Knowledge</span>
 					</div>
 					<div class="split-bio">
 						<p>This tool lets you convert Mardown files to Amazon Kindle compatible files.</p>
