send to kindle by email

--- a/html/index.html
+++ b/html/index.html
@@ -75,8 +75,8 @@
 								<br/>
 								
 								<!-- send to Kindle -->
-								<!-- <input style="display:none" type="checkbox" id="sendtoKindle" onclick="downloadMethodChanged()" /> Send to Kindle<br/> -->
-								<!-- <input style="display:none" placeholder="@kindle.com email address" id="email" type="email" name="email" /> -->
+								<input type="checkbox" id="sendtoKindle" onclick="downloadMethodChanged()" /> Send to Kindle<br/>
+								<input placeholder="@kindle.com email address" id="email" type="email" name="email" />
 								<br/>
 
 								<button id="submitButton" type="submit">Convert</button>
