--- a/html/index.html
+++ b/html/index.html
@@ -77,7 +77,7 @@
 								<br/>
 
 								<!-- data -->
-								<textarea placeholder="Paste your Markdown text here" rows="5" style="width: 100%" name="file" id="textArea" name="text"></textarea>
+								<textarea placeholder="Type your Markdown text here" rows="5" style="width: 100%" name="file" id="textArea" name="text"></textarea>
 								<input id="uploadButton" type="file" name="file" />
 								<input type="checkbox" id="fileUpload" onclick="uploadMethodChanged()" /> Upload Mardown file<br/>
 								<br/>
