maj sender email address

--- a/html/index.html
+++ b/html/index.html
@@ -92,7 +92,7 @@
 						</p>
 						<div id="sent" style="display: none;margin-top: 10px;" class="alert">
 							<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-							The file has been successfully sent to your Kindle.
+							File sent to your Kindle.
 						</div> 
 					</div>
 					<div class="split-lists">
