--- a/html/index.html
+++ b/html/index.html
@@ -63,7 +63,7 @@
 				<div class="split-content-vertically-center">
 					<div class="split-intro">
 						<h1>MD2MOBI</h1>
-						<span class="tagline">Unleash the Knowledge.</span>
+						<span class="tagline">Unleash the Knowledge</span>
 					</div>
 					<div class="split-bio">
 						<p>This tool lets you convert Markdown files to Amazon Kindle compatible files.</p>
