add amazon prefix url

--- a/html/index.html
+++ b/html/index.html
@@ -85,7 +85,7 @@
 								<!-- send to Kindle -->
 								<input type="checkbox" id="sendtoKindle" onclick="downloadMethodChanged()" /> Send to Kindle<br/>
 								<input placeholder="@kindle.com email address" id="email" type="email" name="email" />
-<p>Documents can only be sent to your Kindle devices or apps from e-mail accounts that you added to your <a href="/gp/help/customer/display.html/?nodeId=200767340#approvefrom">Approved Personal Document E-mail List</a>. To receive mobi files from Md2mobi, visit the <a href="/myk#pdocsSettings">Personal Document Settings</a> page at <a href="/myk">Manage Your Kindle</a> and add <b>md2mobi@lapw.at</b> to the list of approved email addresses.</p>
+<p>Documents can only be sent to your Kindle devices or apps from e-mail accounts that you added to your <a href="https://amazon.com/gp/help/customer/display.html/?nodeId=200767340#approvefrom">Approved Personal Document E-mail List</a>. To receive mobi files from Md2mobi, visit the <a href="https://amazon.com/myk#pdocsSettings">Personal Document Settings</a> page at <a href="https://amazon.com/myk">Manage Your Kindle</a> and add <b>md2mobi@lapw.at</b> to the list of approved email addresses.</p>
 								<br/>
 
 								<button id="submitButton" type="submit">Convert</button>
